feat: add pagination to statistics
