# src/api/index.ts
@@ -12,10 +12,13 @@ export { CurrencyType } from './models/CurrencyType';
 export type { Error } from './models/Error';
 export { ErrorCode } from './models/ErrorCode';
 export type { ImportResponse } from './models/ImportResponse';
+export type { PaginatedResult_Statistics_ } from './models/PaginatedResult_Statistics_';
 export type { PaginatedResult_Transaction_ } from './models/PaginatedResult_Transaction_';
 export type { Partial_Omit_TransactionCreate_id_or_createdAt__ } from './models/Partial_Omit_TransactionCreate_id_or_createdAt__';
 export { ServiceStatus } from './models/ServiceStatus';
 export type { Statistics } from './models/Statistics';
+export { StatisticsQuery } from './models/StatisticsQuery';
+export { StatisticsSortableFields } from './models/StatisticsSortableFields';
 export type { SystemHealth } from './models/SystemHealth';
 export type { TimelinePoint } from './models/TimelinePoint';
 export type { Transaction } from './models/Transaction';
