# src/types/statistics.ts
@@ -14,3 +14,19 @@ export interface TimelinePoint {
   date: string
   value: number
 }
+
+export interface StatisticsQuery {
+  sortBy?: StatisticsSortableFields
+  order?: 'ASC' | 'DESC'
+  limit?: number
+  offset?: number
+}
+
+export type StatisticsSortableFields =
+  | 'currency'
+  | 'symbol'
+  | 'totalVolume'
+  | 'totalCost'
+  | 'currentValue'
+  | 'avgPrice'
+  | 'grossPL'
